crates/context-macro/tests/constraints/invalid_seeds_syntax.fail.stderr
error: expected square brackets
  --> tests/constraints/invalid_seeds_syntax.fail.rs:21:17
   |
21 |         seeds = &[&args.admin],
   |                 ^
